--- a/nginx/library.conf
+++ b/nginx/library.conf
@@ -1,7 +1,3 @@
-upstream web {
-  server app:8000;
-}
-
 server {
   listen 80;
   charset utf-8;
@@ -9,17 +5,9 @@ server {
   server_name localhost;
 
   location /api/ {
-    allow all;
-    proxy_pass http://web;
-    proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-Cluster-Client-Ip $remote_addr;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Host $server_name;
+    include uwsgi_params;
+    uwsgi_pass app:8000;
   }
-
 
   location /api/static {
     alias /static;
@@ -33,5 +21,9 @@ server {
     alias /admin_panel;
     index index.html;
     try_files $uri /admin/index.html;
+  }
+
+  location /static {
+    alias /static;
   }
 }
