--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-Django == 2.2.5
-djangorestframework == 3.10.2
-djangorestframework-simplejwt == 4.3.0
-psycopg2-binary == 2.8.3
-pymongo == 3.9.0
-django-cors-headers == 3.1.0
-pillow == 6.1.0
+Django == 3.0.6
+djangorestframework == 3.11.0
+djangorestframework-simplejwt == 4.4.0
+psycopg2-binary == 2.8.5
+pymongo == 3.10.1
+django-cors-headers == 3.2.1
+boto3 == 1.13.8
+pytest-cov == 2.8.1
+pylint == 2.5.2
+pillow == 7.1.2
+uwsgi == 2.0.18
