--- a/.editorconfig
+++ b/.editorconfig
@@ -3,15 +3,21 @@
 # top-most EditorConfig file
 root = true
 
-[*.{py,yml,yaml,conf,sh}]
+[*]
 indent_style = space
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+
+[*.py]
 indent_size = 4
 
-[*.{yml,yaml,conf}]
+[*.{yml,yaml,conf,sh}]
+indent_size = 2
+
+[Jenkinsfile]
 indent_size = 2
 
 [*.md]
