Feature/update ci files (#2)
* Add and update files

Add:
 - role.tf
 - vpc.tf

Update:
 - .gitignore
 - docker-compose.yml
 - variables.env
 - variables.tf

* Update role.tf

* Update Jenkinsfile

* Update role.tf file

* Update role.tf file

* Update tf files

* Add task_definition.json. Update ecr.tf and ecs.tf files

* Update Jenkinsfile and ecr.tf files

* Update:
 - Jenkinsfile
 - ec2.tf
 - ecr.tf
 - ecs.tf
Add:
 - user_data.tpl

* add jenkinsdestroy file

* Update Jenkinsfile

* Update ec2.tf

* Update ec2.tf

* Update ec2.tf

* Update ec2.tf and variables.tf

* Update ec2.tf and variables.tf

* Update variables.tf and add auto_scaling.tf

* Update auto_scaling.tf

* Update tf files

* Update auto_scaling.tf

* Update auto_scaling.tf and ec2.tf

* Update variables.tf and task_definition.json. Rename ec2.tf to launch_configuration.tf

* Update tf files

* Update launch_configuration.tf, ecs.tf and auto_scaling.tf files

* Update launch_configuration.tf

* Update ecs.tf

* Update launch_configuration.tf, ecs.tf

* Update launch_configuration.tf, ecs.tf and variables.tf files

* Update docker-compose.yml

* Update tf files

* Update subnet.tf

* Update vpc.tf

* Update launch_configuration.tf, vpc.tf

* Update launch_configuration.tf

* Update subnet.tf, auto_scaling.tf

* Update launch_configuration.tf

* Update launch_configuration.tf

* Update vpc.tf

* Update tf files

* Update ecs.tf

* Update CI/CD configuration

* Update docker-compose.yml

* Update Dockerfile and ecs.tf

* Update ecs.tf

* Update library.conf and ecs.tf

* Update ecs.tf

* Update ecr.tf

Co-authored-by: Nikita Chernolevskyi <nikita.chernolevsky@coxautoinc.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,38 @@
 version: '3'
 services:
   app:
-    restart: always
-    build: .
+    image: 276444395597.dkr.ecr.eu-central-1.amazonaws.com/library_app
+    build:
+      dockerfile: ./Dockerfile
+      context: .
     command: ./run.sh
-    ports:
-      - "8000:8000"
-    networks:
-      - test
-    env_file:
-      - variables.env
-    depends_on:
-      - postgres
-      - mongo
-    volumes:
-      - ./:/library
-      - ./static:/library/static
-
-  mongo:
-    image: mongo:4.2-bionic
-    restart: always
-    volumes:
-      - ./mongo_db/:/data/db
-    networks:
-      - test
-
-  postgres:
-    image: postgres:11.5
-    restart: always
-    volumes:
-      - ./postgres_db:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    env_file:
-      - variables.env
-    networks:
-      - test
 
   nginx:
-    image: nginx:latest
+    image: 276444395597.dkr.ecr.eu-central-1.amazonaws.com/library_nginx
+    build:
+      dockerfile: ./Dockerfile
+      context: ./nginx
     ports:
-      - "80:80"
-    volumes:
-      - ./nginx:/etc/nginx/conf.d
-      - ./uploads:/uploads
-      - ./static:/static
-    networks:
-      - test
-    depends_on:
-      - app
+    - "80:80"
 
-networks:
-  test:
+#  mongo:
+#    image: mongo:4.2-bionic
+#    restart: always
+#    volumes:
+#      - ./mongo_db/:/data/db
+#    networks:
+#      - library
+#    ports:
+#      - "27017:27017"
+#
+#  postgres:
+#    image: postgres:11.5
+#    restart: always
+#    volumes:
+#      - ./postgres_db:/var/lib/postgresql/data
+#    ports:
+#      - "5432:5432"
+#    env_file:
+#      - variables.env
+#    networks:
+#      - library
