--- a/nginx/library.conf
+++ b/nginx/library.conf
@@ -6,7 +6,7 @@ server {
 
   location /api/ {
     include uwsgi_params;
-    uwsgi_pass app:8000;
+    uwsgi_pass library-app:8000;
   }
 
   location /api/static {
